# PRISM

./: .cursorignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  structure.md
alembic/: env.py
configs/: config.example.yaml  config.hugginggpt.yaml  config.py  embedding_config.py  llm_config.py  models_config.py
data/: cot_cost.json  external_huggingface_models.jsonl  fewshot_cost.json  huggingface_models_perfect.jsonl  hugginggpt_cache.json  hugginggpt_cost.json  hugginggpt_cost_with_cache.json  model.json  model_desc.jsonl  zeroshot_cost.json
db/: session.py  settings.py
docker/: docker-compose.yml  entrypoint.sh
mlebench/: cli.py  data.py  grade.py  metrics.py  operations.py  registry.py  utils.py
pipeline/: ca_pipeline.py  cot_code_pipeline.py  cot_pipeline.py  fewshot_code_pipeline.py  fewshot_pipeline.py  hugginggpt_pipeline.py  prism_direct_mas_pipeline.py  prism_pipeline.py  rag_code_pipeline.py  zeroshot_code_pipeline.py  zeroshot_pipeline.py
prism/: build_storage.py  embedding.py  llm.py  settings.py
provider/: __init__.py  embedding_provider_registry.py  llm_provider_registry.py
scripts/: cli.py  crawl_huggingface_models.py  data.py  evaluator.py  get_model_from_workflow.py  get_model_from_workflow_with_iteration.py  model_inference.py  operations.py  topic_distribution.py  topic_score_calculator.py  utils.py
server/: api_router.py  api_router_new.py  example_onnx_versioning.py  models_server.py  tasks_server.py  test_new_system.py
storage/: base_storage.py  ca_storage.py  local_storage.py  (+3 more)
(+314 files in other folders)
