[project]
name = "PRISM"
version = "0.0.1"
description = ""
authors = [
    { name = "Pham Tung Thuy"},
    { name = "Dương Minh Quân"},
    { name = "Lương Duy Quân"}
]
license = { file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "loguru==0.7.3",
    "click==8.2.1",
    "requests==2.32.4",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
tasks = [
    "fastapi==0.115.9",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "minio>=7.2",
    "aiofiles>=24.1.0",
    "alembic==1.15.2",
]

models = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchaudio==2.7.1",
    "tensorflow",
    "keras==3.11.2",
    "transformers==4.52.4",
    "diffusers==0.33.1",
    "sentence_transformers==5.0.0",
    "ultralytics==8.3.162",
    "datasets==3.6.0",
    "pandas==2.3.0",
    "scipy==1.15.3",
    "scikit-learn==1.7.0",
    "opencv-python==4.12.0.88",
    "moviepy==2.2.1",
    "av==14.4.0",
    "pillow==11.2.1",
    "pydub==0.25.1",
    "soundfile==0.13.1",
    "pytesseract==0.3.13",
    "ffmpeg-python==0.2.0",
    "openai==1.86.0",
    "anthropic==0.54.0",
    "tiktoken==0.9.0",
    "huggingface_hub==0.33.0",
    "nltk==3.9.1",
    "rank_bm25==0.2.2",
]

[tool.poetry]
package-mode = false
